helloworld/k8-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1
  namespace: istio-demos
  labels:
    app: helloworld
    version: v1
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
      - name: helloworld
        image: mwy001/springboot-hello:v1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
  namespace: istio-demos
  labels:
    app: helloworld
    version: v2
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
      - name: helloworld
        image: mwy001/springboot-hello:v2
        ports:
        - containerPort: 8080
