helloworld/k8-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: istio-demos
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: helloworld
