helloworld/istio-virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
  namespace: istio-demos
spec:
  hosts:
    - "istio-demos.com"
  gateways:
    - helloworld-gateway
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        port:
          number: 8080
        host: helloworld
        subset: v1
      weight: 10
    - destination:
        port:
          number: 8080
        host: helloworld
        subset: v2
      weight: 90
